force-app/main/default/objects/ProductBundle__c/fields/Name_DE__c.field-meta.xml
<CustomField>
    <fullName>Name_DE__c</fullName>
    <label>Name DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>