force-app/main/default/objects/ProductBundle__c/fields/Name_FR__c.field-meta.xml
<CustomField>
    <fullName>Name_FR__c</fullName>
    <label>Name FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>