force-app/main/default/objects/ProductBundle__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>Product Category</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipLabel>Product Bundles</relationshipLabel>
    <relationshipName>Product_Bundles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>