force-app/main/default/objects/ProductBundle__c/listViews/All_Bundles.listView-meta.xml
<ListView>
    <fullName>All_Bundles</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Bundles</label>
</ListView>